--- a/strings/Alphabet rangoli.ipynb
+++ b/strings/Alphabet rangoli.ipynb
@@ -11,8 +11,8 @@
     "    l2=[i for i in li[:-5:-1]]\n",
     "    n=len(li)\n",
     "    row=(size*2)-1\n",
-    "    middle_row='-'.join(l2)+\"-\"+'-'.join(li)\n",
-    "    col=len(middle_row)\n",
+    "    middle_row=li[n-1::-1]+li[1:n]\n",
+    "    col=len('-'.join(middle_row))\n",
     "    for i in range(1,n):\n",
     "        print('-'.join(li[n-1:n-i:-1]+li[n-i:n]).center(col,'-'))\n",
     "    for i in range(n,0,-1):\n",
